--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<script src="/config.js"></script>
     <title>Cubic helper</title>
   </head>
  <body class="bg-[var(--surface)] text-[var(--text)] antialiased">
     <div id="root"></div>
+    <script src="/cubic-frontend/config.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
