--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <title>Cubic helper</title>
   </head>
  <body class="bg-[var(--surface)] text-[var(--text)] antialiased">
-    <div id="root"></div>
-    <script src="/cubic-frontend/config.js"></script>
+  <div id="root"></div>
+  <script src="/config.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
